Fix the alignments of the chat and spreadsheet. Organize the css

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,11 +1,11 @@
 html, body {
-	width: 100%;
 	height: 100%;
+	width: 100%;
 }
 
 body {
-	margin: 0;
 	background-color: #ccc;
+	margin: 0;
 	overflow: hidden;
 }
 
@@ -20,8 +20,8 @@ iframe {
 
 #spreadsheetWrapper {
 	height: 70%;
-	width: 100%;
 	padding-top: 5px;
+	width: 100%;
 }
 
 #puzzlesheet{
@@ -30,25 +30,25 @@ iframe {
 
 #chat {
 	height: 235px;
-	width: 100%;
 	overflow: hidden;
+	width: 100%;
 }
 
 #chatWrapper {
-	/*margin-top: -95px;*/
 	height: 235px;
-	width: 100%;
+	margin-top: -8px;
 	overflow: hidden;
 	padding-bottom: 5px;
+	width: 100%;
 }
 
 #callins {
 	background-color: #ccc;
+	height: 25px;
+	overflow: hidden;
 	position: absolute;
 	top: 0;
-	height: 25px;
 	width: 100%;
-	overflow: hidden;
 }
 
 .noMouseEvents {
@@ -56,8 +56,8 @@ iframe {
 }
 
 #footer {
-    text-align: center;
     margin: auto;
+    text-align: center;
 }
 
 #solved {
